y.output

state 0
	$accept : _translation_unit $end 

	MUL  shift 28
	Id  shift 30
	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	OPEN_BRACE  shift 19
	.  error

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	identifier  goto 29
	translation_unit  goto 1
	top_level_decl  goto 2
	decl  goto 3
	declaration_specifiers  goto 5
	type_specifier  goto 7
	int_type_specifier  goto 9
	declarator  goto 8
	pointer_declarator  goto 11
	pointer  goto 17
	direct_declarator  goto 12
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21
	function_definition  goto 4
	function_def_specifier  goto 6

state 1
	$accept :  translation_unit_$end 
	translation_unit :  translation_unit_top_level_decl 

	$end  accept
	MUL  shift 28
	Id  shift 30
	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	OPEN_BRACE  shift 19
	.  error

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	identifier  goto 29
	top_level_decl  goto 31
	decl  goto 3
	declaration_specifiers  goto 5
	type_specifier  goto 7
	int_type_specifier  goto 9
	declarator  goto 8
	pointer_declarator  goto 11
	pointer  goto 17
	direct_declarator  goto 12
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21
	function_definition  goto 4
	function_def_specifier  goto 6

state 2
	translation_unit :  top_level_decl_    (1)

	.  reduce 1


state 3
	top_level_decl :  decl_    (3)

	.  reduce 3


state 4
	top_level_decl :  function_definition_    (4)

	.  reduce 4


state 5
	decl :  declaration_specifiers_initialized_declarator_list SEMICOLON 
	function_def_specifier :  declaration_specifiers_declarator 
	function_def_specifier :  declaration_specifiers_declarator declaration_list 

	MUL  shift 28
	Id  shift 30
	OPEN_BRACE  shift 19
	.  error

	identifier  goto 29
	initialized_declarator_list  goto 32
	initialized_declarator  goto 34
	declarator  goto 33
	pointer_declarator  goto 11
	pointer  goto 17
	direct_declarator  goto 12
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21

state 6
	function_definition :  function_def_specifier_compound_statement 

	OPEN_CBRACE  shift 36
	.  error

	compound_statement  goto 35

state 7
	declaration_specifiers :  type_specifier_    (6)
	declaration_specifiers :  type_specifier_declaration_specifiers 

	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	.  reduce 6

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	declaration_specifiers  goto 37
	type_specifier  goto 7
	int_type_specifier  goto 9

state 8
	function_def_specifier :  declarator_    (137)
	function_def_specifier :  declarator_declaration_list 

	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	.  reduce 137

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	decl  goto 39
	declaration_specifiers  goto 40
	type_specifier  goto 7
	int_type_specifier  goto 9
	declaration_list  goto 38

state 9
	type_specifier :  int_type_specifier_    (8)

	.  reduce 8


state 10
	type_specifier :  void_type_specifier_    (9)

	.  reduce 9


state 11
	declarator :  pointer_declarator_    (37)

	.  reduce 37


state 12
	declarator :  direct_declarator_    (38)
	array_declarator :  direct_declarator_OPEN_BRACKET CLOSE_BRACKET 
	array_declarator :  direct_declarator_OPEN_BRACKET constant_expr CLOSE_BRACKET 
	array_declarator :  direct_declarator_OPEN_BRACKET MUL 
	array_declarator :  direct_declarator_OPEN_BRACKET array_size_expr CLOSE_BRACKET 
	function_declarator :  direct_declarator_OPEN_BRACE parameter_type_list CLOSE_BRACE 

	OPEN_BRACE  shift 42
	OPEN_BRACKET  shift 41
	.  reduce 38


state 13
	int_type_specifier :  signed_type_specifier_    (10)

	.  reduce 10


state 14
	int_type_specifier :  unsigned_type_specifier_    (11)

	.  reduce 11


state 15
	int_type_specifier :  char_type_specifier_    (12)

	.  reduce 12


state 16
	void_type_specifier :  VOID_    (13)

	.  reduce 13


state 17
	pointer_declarator :  pointer_direct_declarator 

	Id  shift 30
	OPEN_BRACE  shift 19
	.  error

	identifier  goto 29
	direct_declarator  goto 43
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21

state 18
	direct_declarator :  simple_declarator_    (42)

	.  reduce 42


state 19
	direct_declarator :  OPEN_BRACE_declarator CLOSE_BRACE 

	MUL  shift 28
	Id  shift 30
	OPEN_BRACE  shift 19
	.  error

	identifier  goto 29
	declarator  goto 44
	pointer_declarator  goto 11
	pointer  goto 17
	direct_declarator  goto 12
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21

state 20
	direct_declarator :  array_declarator_    (44)

	.  reduce 44


state 21
	direct_declarator :  function_declarator_    (45)

	.  reduce 45


22: shift/reduce conflict (shift 45, red'n 24) on INT
state 22
	signed_type_specifier :  SHORT_INT 
	signed_type_specifier :  SHORT_    (24)

	INT  shift 45
	.  reduce 24


23: shift/reduce conflict (shift 46, red'n 19) on SHORT
23: shift/reduce conflict (shift 49, red'n 19) on CHAR
23: shift/reduce conflict (shift 47, red'n 19) on INT
23: shift/reduce conflict (shift 48, red'n 19) on LONG
state 23
	signed_type_specifier :  SIGNED_SHORT 
	signed_type_specifier :  SIGNED_SHORT INT 
	signed_type_specifier :  SIGNED_INT 
	signed_type_specifier :  SIGNED_    (19)
	signed_type_specifier :  SIGNED_LONG 
	signed_type_specifier :  SIGNED_LONG INT 
	char_type_specifier :  SIGNED_CHAR 

	SHORT  shift 46
	CHAR  shift 49
	INT  shift 47
	LONG  shift 48
	.  reduce 19


state 24
	signed_type_specifier :  INT_    (17)

	.  reduce 17


25: shift/reduce conflict (shift 50, red'n 20) on INT
state 25
	signed_type_specifier :  LONG_    (20)
	signed_type_specifier :  LONG_INT 

	INT  shift 50
	.  reduce 20


26: shift/reduce conflict (shift 51, red'n 25) on SHORT
26: shift/reduce conflict (shift 54, red'n 25) on CHAR
26: shift/reduce conflict (shift 52, red'n 25) on INT
26: shift/reduce conflict (shift 53, red'n 25) on LONG
state 26
	unsigned_type_specifier :  UNSIGNED_    (25)
	unsigned_type_specifier :  UNSIGNED_SHORT INT 
	unsigned_type_specifier :  UNSIGNED_SHORT 
	unsigned_type_specifier :  UNSIGNED_INT 
	unsigned_type_specifier :  UNSIGNED_LONG 
	unsigned_type_specifier :  UNSIGNED_LONG INT 
	char_type_specifier :  UNSIGNED_CHAR 

	SHORT  shift 51
	CHAR  shift 54
	INT  shift 52
	LONG  shift 53
	.  reduce 25


state 27
	char_type_specifier :  CHAR_    (31)

	.  reduce 31


state 28
	pointer :  MUL_    (40)
	pointer :  MUL_pointer 

	MUL  shift 28
	.  reduce 40

	pointer  goto 55

state 29
	simple_declarator :  identifier_    (46)

	.  reduce 46


state 30
	identifier :  Id_    (144)

	.  reduce 144


state 31
	translation_unit :  translation_unit top_level_decl_    (2)

	.  reduce 2


state 32
	decl :  declaration_specifiers initialized_declarator_list_SEMICOLON 
	initialized_declarator_list :  initialized_declarator_list_COMMA initialized_declarator 

	COMMA  shift 57
	SEMICOLON  shift 56
	.  error


state 33
	initialized_declarator :  declarator_    (36)
	function_def_specifier :  declaration_specifiers declarator_    (138)
	function_def_specifier :  declaration_specifiers declarator_declaration_list 

	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	OPEN_CBRACE  reduce 138
	.  reduce 36

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	decl  goto 39
	declaration_specifiers  goto 40
	type_specifier  goto 7
	int_type_specifier  goto 9
	declaration_list  goto 58

state 34
	initialized_declarator_list :  initialized_declarator_    (34)

	.  reduce 34


state 35
	function_definition :  function_def_specifier compound_statement_    (136)

	.  reduce 136


state 36
	compound_statement :  OPEN_CBRACE_declaration_or_statement_list CLOSE_CBRACE 
	compound_statement :  OPEN_CBRACE_CLOSE_CBRACE 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	DO  shift 90
	FOR  shift 91
	RET  shift 83
	BREAK  shift 81
	SHORT  shift 22
	GOTO  shift 84
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	IF  shift 88
	CHAR  shift 27
	INT  shift 24
	CONTINUE  shift 82
	LONG  shift 25
	WHILE  shift 89
	OPEN_BRACE  shift 130
	OPEN_CBRACE  shift 36
	CLOSE_CBRACE  shift 60
	SEMICOLON  shift 85
	.  error

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	identifier  goto 93
	decl  goto 62
	declaration_specifiers  goto 40
	type_specifier  goto 7
	int_type_specifier  goto 9
	conditional_expr  goto 94
	logical_or_expr  goto 96
	logical_and_expr  goto 106
	bitwise_or_expr  goto 120
	bitwise_xor_expr  goto 126
	bitwise_and_expr  goto 131
	equality_expr  goto 135
	relational_expr  goto 136
	shift_expr  goto 137
	additive_expr  goto 138
	multiplicative_expr  goto 139
	mul_op  goto 117
	cast_expr  goto 140
	unary_expr  goto 95
	unary_minus_expr  goto 98
	unary_plus_expr  goto 99
	predecrement_expr  goto 105
	preincrement_expr  goto 104
	indirection_expr  goto 103
	address_expr  goto 102
	bitwise_negation_expr  goto 101
	logical_negation_expr  goto 100
	postfix_expr  goto 97
	primary_expr  goto 107
	paranthesized_expr  goto 122
	post_increment_expr  goto 110
	post_decrement_expr  goto 111
	subscript_expr  goto 108
	expr  goto 74
	comma_expr  goto 86
	assignment_expr  goto 92
	function_call  goto 109
	goto_statement  goto 72
	if_else_statement  goto 77
	if_statement  goto 76
	iterative_statement  goto 68
	label  goto 75
	labeled_statement  goto 65
	named_label  goto 87
	null_statement  goto 73
	statement  goto 63
	while_statement  goto 78
	break_statement  goto 69
	compound_statement  goto 66
	conditional_statement  goto 67
	constant  goto 121
	integer_constant  goto 127
	character_constant  goto 128
	string_constant  goto 129
	continue_statement  goto 70
	declaration_or_statement  goto 61
	declaration_or_statement_list  goto 59
	do_statement  goto 79
	expression_statement  goto 64
	for_statement  goto 80
	return_statement  goto 71

state 37
	declaration_specifiers :  type_specifier declaration_specifiers_    (7)

	.  reduce 7


state 38
	function_def_specifier :  declarator declaration_list_    (139)
	declaration_list :  declaration_list_decl 

	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	.  reduce 139

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	decl  goto 141
	declaration_specifiers  goto 40
	type_specifier  goto 7
	int_type_specifier  goto 9

state 39
	declaration_list :  decl_    (190)

	.  reduce 190


state 40
	decl :  declaration_specifiers_initialized_declarator_list SEMICOLON 

	MUL  shift 28
	Id  shift 30
	OPEN_BRACE  shift 19
	.  error

	identifier  goto 29
	initialized_declarator_list  goto 32
	initialized_declarator  goto 34
	declarator  goto 142
	pointer_declarator  goto 11
	pointer  goto 17
	direct_declarator  goto 12
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21

state 41
	array_declarator :  direct_declarator OPEN_BRACKET_CLOSE_BRACKET 
	array_declarator :  direct_declarator OPEN_BRACKET_constant_expr CLOSE_BRACKET 
	array_declarator :  direct_declarator OPEN_BRACKET_MUL 
	array_declarator :  direct_declarator OPEN_BRACKET_array_size_expr CLOSE_BRACKET 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 145
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	OPEN_BRACE  shift 130
	CLOSE_BRACKET  shift 143
	.  error

	identifier  goto 149
	constant_expr  goto 144
	conditional_expr  goto 147
	logical_or_expr  goto 96
	logical_and_expr  goto 106
	bitwise_or_expr  goto 120
	bitwise_xor_expr  goto 126
	bitwise_and_expr  goto 131
	equality_expr  goto 135
	relational_expr  goto 136
	shift_expr  goto 137
	additive_expr  goto 138
	multiplicative_expr  goto 139
	mul_op  goto 117
	cast_expr  goto 140
	unary_expr  goto 95
	unary_minus_expr  goto 98
	unary_plus_expr  goto 99
	predecrement_expr  goto 105
	preincrement_expr  goto 104
	indirection_expr  goto 103
	address_expr  goto 102
	bitwise_negation_expr  goto 101
	logical_negation_expr  goto 100
	postfix_expr  goto 97
	primary_expr  goto 107
	paranthesized_expr  goto 122
	post_increment_expr  goto 110
	post_decrement_expr  goto 111
	subscript_expr  goto 108
	assignment_expr  goto 148
	function_call  goto 109
	constant  goto 121
	integer_constant  goto 127
	character_constant  goto 128
	string_constant  goto 129
	array_size_expr  goto 146

state 42
	function_declarator :  direct_declarator OPEN_BRACE_parameter_type_list CLOSE_BRACE 

	MUL  shift 28
	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	OPEN_BRACE  shift 157
	OPEN_BRACKET  shift 158
	.  error

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	declaration_specifiers  goto 153
	type_specifier  goto 7
	int_type_specifier  goto 9
	pointer  goto 155
	parameter_decl  goto 152
	parameter_list  goto 151
	parameter_type_list  goto 150
	abstract_decl  goto 154
	direct_abstract_decl  goto 156

state 43
	pointer_declarator :  pointer direct_declarator_    (39)
	array_declarator :  direct_declarator_OPEN_BRACKET CLOSE_BRACKET 
	array_declarator :  direct_declarator_OPEN_BRACKET constant_expr CLOSE_BRACKET 
	array_declarator :  direct_declarator_OPEN_BRACKET MUL 
	array_declarator :  direct_declarator_OPEN_BRACKET array_size_expr CLOSE_BRACKET 
	function_declarator :  direct_declarator_OPEN_BRACE parameter_type_list CLOSE_BRACE 

	OPEN_BRACE  shift 42
	OPEN_BRACKET  shift 41
	.  reduce 39


state 44
	direct_declarator :  OPEN_BRACE declarator_CLOSE_BRACE 

	CLOSE_BRACE  shift 159
	.  error


state 45
	signed_type_specifier :  SHORT INT_    (14)

	.  reduce 14


46: shift/reduce conflict (shift 160, red'n 15) on INT
state 46
	signed_type_specifier :  SIGNED SHORT_    (15)
	signed_type_specifier :  SIGNED SHORT_INT 

	INT  shift 160
	.  reduce 15


state 47
	signed_type_specifier :  SIGNED INT_    (18)

	.  reduce 18


48: shift/reduce conflict (shift 161, red'n 22) on INT
state 48
	signed_type_specifier :  SIGNED LONG_    (22)
	signed_type_specifier :  SIGNED LONG_INT 

	INT  shift 161
	.  reduce 22


state 49
	char_type_specifier :  SIGNED CHAR_    (33)

	.  reduce 33


state 50
	signed_type_specifier :  LONG INT_    (21)

	.  reduce 21


51: shift/reduce conflict (shift 162, red'n 27) on INT
state 51
	unsigned_type_specifier :  UNSIGNED SHORT_INT 
	unsigned_type_specifier :  UNSIGNED SHORT_    (27)

	INT  shift 162
	.  reduce 27


state 52
	unsigned_type_specifier :  UNSIGNED INT_    (28)

	.  reduce 28


53: shift/reduce conflict (shift 163, red'n 29) on INT
state 53
	unsigned_type_specifier :  UNSIGNED LONG_    (29)
	unsigned_type_specifier :  UNSIGNED LONG_INT 

	INT  shift 163
	.  reduce 29


state 54
	char_type_specifier :  UNSIGNED CHAR_    (32)

	.  reduce 32


state 55
	pointer :  MUL pointer_    (41)

	.  reduce 41


state 56
	decl :  declaration_specifiers initialized_declarator_list SEMICOLON_    (5)

	.  reduce 5


state 57
	initialized_declarator_list :  initialized_declarator_list COMMA_initialized_declarator 

	MUL  shift 28
	Id  shift 30
	OPEN_BRACE  shift 19
	.  error

	identifier  goto 29
	initialized_declarator  goto 164
	declarator  goto 142
	pointer_declarator  goto 11
	pointer  goto 17
	direct_declarator  goto 12
	simple_declarator  goto 18
	array_declarator  goto 20
	function_declarator  goto 21

state 58
	function_def_specifier :  declaration_specifiers declarator declaration_list_    (140)
	declaration_list :  declaration_list_decl 

	SHORT  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	CHAR  shift 27
	INT  shift 24
	LONG  shift 25
	.  reduce 140

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	decl  goto 141
	declaration_specifiers  goto 40
	type_specifier  goto 7
	int_type_specifier  goto 9

state 59
	compound_statement :  OPEN_CBRACE declaration_or_statement_list_CLOSE_CBRACE 
	declaration_or_statement_list :  declaration_or_statement_list_declaration_or_statement 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	DO  shift 90
	FOR  shift 91
	RET  shift 83
	BREAK  shift 81
	SHORT  shift 22
	GOTO  shift 84
	SIGNED  shift 23
	UNSIGNED  shift 26
	VOID  shift 16
	IF  shift 88
	CHAR  shift 27
	INT  shift 24
	CONTINUE  shift 82
	LONG  shift 25
	WHILE  shift 89
	OPEN_BRACE  shift 130
	OPEN_CBRACE  shift 36
	CLOSE_CBRACE  shift 165
	SEMICOLON  shift 85
	.  error

	void_type_specifier  goto 10
	signed_type_specifier  goto 13
	unsigned_type_specifier  goto 14
	char_type_specifier  goto 15
	identifier  goto 93
	decl  goto 62
	declaration_specifiers  goto 40
	type_specifier  goto 7
	int_type_specifier  goto 9
	conditional_expr  goto 94
	logical_or_expr  goto 96
	logical_and_expr  goto 106
	bitwise_or_expr  goto 120
	bitwise_xor_expr  goto 126
	bitwise_and_expr  goto 131
	equality_expr  goto 135
	relational_expr  goto 136
	shift_expr  goto 137
	additive_expr  goto 138
	multiplicative_expr  goto 139
	mul_op  goto 117
	cast_expr  goto 140
	unary_expr  goto 95
	unary_minus_expr  goto 98
	unary_plus_expr  goto 99
	predecrement_expr  goto 105
	preincrement_expr  goto 104
	indirection_expr  goto 103
	address_expr  goto 102
	bitwise_negation_expr  goto 101
	logical_negation_expr  goto 100
	postfix_expr  goto 97
	primary_expr  goto 107
	paranthesized_expr  goto 122
	post_increment_expr  goto 110
	post_decrement_expr  goto 111
	subscript_expr  goto 108
	expr  goto 74
	comma_expr  goto 86
	assignment_expr  goto 92
	function_call  goto 109
	goto_statement  goto 72
	if_else_statement  goto 77
	if_statement  goto 76
	iterative_statement  goto 68
	label  goto 75
	labeled_statement  goto 65
	named_label  goto 87
	null_statement  goto 73
	statement  goto 63
	while_statement  goto 78
	break_statement  goto 69
	compound_statement  goto 66
	conditional_statement  goto 67
	constant  goto 121
	integer_constant  goto 127
	character_constant  goto 128
	string_constant  goto 129
	continue_statement  goto 70
	declaration_or_statement  goto 166
	do_statement  goto 79
	expression_statement  goto 64
	for_statement  goto 80
	return_statement  goto 71

state 60
	compound_statement :  OPEN_CBRACE CLOSE_CBRACE_    (179)

	.  reduce 179


state 61
	declaration_or_statement_list :  declaration_or_statement_    (194)

	.  reduce 194


state 62
	declaration_or_statement :  decl_    (192)

	.  reduce 192


state 63
	declaration_or_statement :  statement_    (193)

	.  reduce 193


state 64
	statement :  expression_statement_    (163)

	.  reduce 163


state 65
	statement :  labeled_statement_    (164)

	.  reduce 164


state 66
	statement :  compound_statement_    (165)

	.  reduce 165


state 67
	statement :  conditional_statement_    (166)

	.  reduce 166


state 68
	statement :  iterative_statement_    (167)

	.  reduce 167


state 69
	statement :  break_statement_    (168)

	.  reduce 168


state 70
	statement :  continue_statement_    (169)

	.  reduce 169


state 71
	statement :  return_statement_    (170)

	.  reduce 170


state 72
	statement :  goto_statement_    (171)

	.  reduce 171


state 73
	statement :  null_statement_    (172)

	.  reduce 172


state 74
	expression_statement :  expr_SEMICOLON 

	SEMICOLON  shift 167
	.  error


state 75
	labeled_statement :  label_COLON statement 

	COLON  shift 168
	.  error


state 76
	conditional_statement :  if_statement_    (180)

	.  reduce 180


state 77
	conditional_statement :  if_else_statement_    (181)

	.  reduce 181


state 78
	iterative_statement :  while_statement_    (149)

	.  reduce 149


state 79
	iterative_statement :  do_statement_    (150)

	.  reduce 150


state 80
	iterative_statement :  for_statement_    (151)

	.  reduce 151


state 81
	break_statement :  BREAK_SEMICOLON 

	SEMICOLON  shift 169
	.  error


state 82
	continue_statement :  CONTINUE_SEMICOLON 

	SEMICOLON  shift 170
	.  error


state 83
	return_statement :  RET_SEMICOLON 
	return_statement :  RET_expr SEMICOLON 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	OPEN_BRACE  shift 130
	SEMICOLON  shift 171
	.  error

	identifier  goto 149
	conditional_expr  goto 94
	logical_or_expr  goto 96
	logical_and_expr  goto 106
	bitwise_or_expr  goto 120
	bitwise_xor_expr  goto 126
	bitwise_and_expr  goto 131
	equality_expr  goto 135
	relational_expr  goto 136
	shift_expr  goto 137
	additive_expr  goto 138
	multiplicative_expr  goto 139
	mul_op  goto 117
	cast_expr  goto 140
	unary_expr  goto 95
	unary_minus_expr  goto 98
	unary_plus_expr  goto 99
	predecrement_expr  goto 105
	preincrement_expr  goto 104
	indirection_expr  goto 103
	address_expr  goto 102
	bitwise_negation_expr  goto 101
	logical_negation_expr  goto 100
	postfix_expr  goto 97
	primary_expr  goto 107
	paranthesized_expr  goto 122
	post_increment_expr  goto 110
	post_decrement_expr  goto 111
	subscript_expr  goto 108
	expr  goto 172
	comma_expr  goto 86
	assignment_expr  goto 92
	function_call  goto 109
	constant  goto 121
	integer_constant  goto 127
	character_constant  goto 128
	string_constant  goto 129

state 84
	goto_statement :  GOTO_named_label SEMICOLON 

	Id  shift 30
	.  error

	identifier  goto 174
	named_label  goto 173

state 85
	null_statement :  SEMICOLON_    (155)

	.  reduce 155


state 86
	expr :  comma_expr_    (116)
	comma_expr :  comma_expr_COMMA assignment_expr 

	COMMA  shift 175
	.  reduce 116


state 87
	label :  named_label_    (152)

	.  reduce 152


state 88
	if_else_statement :  IF_OPEN_BRACE expr CLOSE_BRACE statement ELSE statement 
	if_statement :  IF_OPEN_BRACE expr CLOSE_BRACE statement 

	OPEN_BRACE  shift 176
	.  error


state 89
	while_statement :  WHILE_OPEN_BRACE expr CLOSE_BRACE statement 

	OPEN_BRACE  shift 177
	.  error


state 90
	do_statement :  DO_statement WHILE OPEN_BRACE expr CLOSE_BRACE SEMICOLON 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	DO  shift 90
	FOR  shift 91
	RET  shift 83
	BREAK  shift 81
	GOTO  shift 84
	IF  shift 88
	CONTINUE  shift 82
	WHILE  shift 89
	OPEN_BRACE  shift 130
	OPEN_CBRACE  shift 36
	SEMICOLON  shift 85
	.  error

	identifier  goto 93
	conditional_expr  goto 94
	logical_or_expr  goto 96
	logical_and_expr  goto 106
	bitwise_or_expr  goto 120
	bitwise_xor_expr  goto 126
	bitwise_and_expr  goto 131
	equality_expr  goto 135
	relational_expr  goto 136
	shift_expr  goto 137
	additive_expr  goto 138
	multiplicative_expr  goto 139
	mul_op  goto 117
	cast_expr  goto 140
	unary_expr  goto 95
	unary_minus_expr  goto 98
	unary_plus_expr  goto 99
	predecrement_expr  goto 105
	preincrement_expr  goto 104
	indirection_expr  goto 103
	address_expr  goto 102
	bitwise_negation_expr  goto 101
	logical_negation_expr  goto 100
	postfix_expr  goto 97
	primary_expr  goto 107
	paranthesized_expr  goto 122
	post_increment_expr  goto 110
	post_decrement_expr  goto 111
	subscript_expr  goto 108
	expr  goto 74
	comma_expr  goto 86
	assignment_expr  goto 92
	function_call  goto 109
	goto_statement  goto 72
	if_else_statement  goto 77
	if_statement  goto 76
	iterative_statement  goto 68
	label  goto 75
	labeled_statement  goto 65
	named_label  goto 87
	null_statement  goto 73
	statement  goto 178
	while_statement  goto 78
	break_statement  goto 69
	compound_statement  goto 66
	conditional_statement  goto 67
	constant  goto 121
	integer_constant  goto 127
	character_constant  goto 128
	string_constant  goto 129
	continue_statement  goto 70
	do_statement  goto 79
	expression_statement  goto 64
	for_statement  goto 80
	return_statement  goto 71

state 91
	for_statement :  FOR_for_expr statement 

	OPEN_BRACE  shift 180
	.  error

	for_expr  goto 179

state 92
	comma_expr :  assignment_expr_    (117)

	.  reduce 117


state 93
	primary_expr :  identifier_    (109)
	named_label :  identifier_    (154)

	COLON  reduce 154
	.  reduce 109


state 94
	assignment_expr :  conditional_expr_    (119)

	.  reduce 119


state 95
	cast_expr :  unary_expr_    (85)
	assignment_expr :  unary_expr_assignment_op assignment_expr 

	NOT_EQ  shift 193
	EQ  shift 182
	ADD_EQ  shift 183
	SUB_EQ  shift 184
	MUL_EQ  shift 185
	DIV_EQ  shift 186
	MOD_EQ  shift 187
	LS_EQ  shift 188
	RS_EQ  shift 189
	AND_EQ  shift 190
	XOR_EQ  shift 191
	OR_EQ  shift 192
	.  reduce 85

	assignment_op  goto 181

state 96
	conditional_expr :  logical_or_expr_    (52)
	conditional_expr :  logical_or_expr_QES expr COLON conditional_expr 
	logical_or_expr :  logical_or_expr_BOOL_OR logical_and_expr 

	BOOL_OR  shift 195
	QES  shift 194
	.  reduce 52


state 97
	unary_expr :  postfix_expr_    (87)
	post_increment_expr :  postfix_expr_INC 
	post_decrement_expr :  postfix_expr_DEC 
	subscript_expr :  postfix_expr_OPEN_BRACKET expr CLOSE_BRACKET 
	function_call :  postfix_expr_OPEN_BRACE CLOSE_BRACE 
	function_call :  postfix_expr_OPEN_BRACE expression_list CLOSE_BRACE 

	INC  shift 196
	DEC  shift 197
	OPEN_BRACE  shift 199
	OPEN_BRACKET  shift 198
	.  reduce 87


state 98
	unary_expr :  unary_minus_expr_    (88)

	.  reduce 88


state 99
	unary_expr :  unary_plus_expr_    (89)

	.  reduce 89


state 100
	unary_expr :  logical_negation_expr_    (90)

	.  reduce 90


state 101
	unary_expr :  bitwise_negation_expr_    (91)

	.  reduce 91


state 102
	unary_expr :  address_expr_    (92)

	.  reduce 92


state 103
	unary_expr :  indirection_expr_    (93)

	.  reduce 93


state 104
	unary_expr :  preincrement_expr_    (94)

	.  reduce 94


state 105
	unary_expr :  predecrement_expr_    (95)

	.  reduce 95


state 106
	logical_or_expr :  logical_and_expr_    (54)
	logical_and_expr :  logical_and_expr_BOOL_AND bitwise_or_expr 

	BOOL_AND  shift 200
	.  reduce 54


state 107
	postfix_expr :  primary_expr_    (104)

	.  reduce 104


state 108
	postfix_expr :  subscript_expr_    (105)

	.  reduce 105


state 109
	postfix_expr :  function_call_    (106)

	.  reduce 106


state 110
	postfix_expr :  post_increment_expr_    (107)

	.  reduce 107


state 111
	postfix_expr :  post_decrement_expr_    (108)

	.  reduce 108


state 112
	unary_minus_expr :  SUB_cast_expr 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	OPEN_BRACE  shift 130
	.  error

	identifier  goto 149
	mul_op  goto 117
	cast_expr  goto 201
	unary_expr  goto 202
	unary_minus_expr  goto 98
	unary_plus_expr  goto 99
	predecrement_expr  goto 105
	preincrement_expr  goto 104
	indirection_expr  goto 103
	address_expr  goto 102
	bitwise_negation_expr  goto 101
	logical_negation_expr  goto 100
	postfix_expr  goto 97
	primary_expr  goto 107
	paranthesized_expr  goto 122
	post_increment_expr  goto 110
	post_decrement_expr  goto 111
	subscript_expr  goto 108
	function_call  goto 109
	constant  goto 121
	integer_constant  goto 127
	character_constant  goto 128
	string_constant  goto 129

state 113
	unary_plus_expr :  ADD_cast_expr 

	INC  shift 118
	DEC  shift 119
	COM  shift 115
	NOT  shift 114
	AND  shift 116
	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	ADD  shift 113
	SUB  shift 112
	Id  shift 30
	Integer  shift 132
	Character  shift 133
	String  shift 134
	OPEN_BRACE  shift 130
	.  error

	identifier  goto 149
	mul_op  goto 117
